
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
		
		<!-- Titre activité  -->
        <TextView
            android:id="@+id/titre_preferences"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginRight="20dp"
            android:text="@string/titre_preferences"
            android:textColor="@color/black" />

    </LinearLayout>

	<!-- Libellé du choix du pays -->
	<TextView
	    android:id="@+id/libelle_choix_pays"
   		android:layout_width="wrap_content"
   		android:layout_height="wrap_content"
   		android:layout_margin="10dp"
   		android:textColor="@color/black"
   		android:text="@string/libelle_pays" />

	<!-- Liste des pays disponibles -->
	<Spinner
		android:id="@+id/spinner_choix_pays"
   		android:layout_width="match_parent"
   		android:layout_height="wrap_content"
   		android:drawSelectorOnTop="true" />

	<!-- Disponibilité des informations générales du pays -->
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="@dimen/prefs_margin_inter"
	    android:orientation="horizontal" >

		<TextView
		    android:id="@+id/disponibilite_informations"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_margin="10dp"
		    android:text="@string/etat_informations"
		    android:textColor="@color/black" />

		<ImageView
		    android:id="@+id/disponibilite_informations_image"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:src="@drawable/navigation_accept" />
	</LinearLayout>

	<!-- Disponibilité des correspondants du pays -->
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >

		<TextView
		    android:id="@+id/disponibilite_correspondants"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_margin="10dp"
		    android:text="@string/etat_correspondants"
		    android:textColor="@color/black" />

		<ImageView
		    android:id="@+id/disponibilite_correspondants_image"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:src="@drawable/navigation_accept" />
	</LinearLayout>

	<!-- Disponibilité des guides du pays -->
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >

		<TextView
		    android:id="@+id/disponibilite_guides"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_margin="10dp"
		    android:text="@string/etat_guides"
		    android:textColor="@color/black" />

		<ImageView
		    android:id="@+id/disponibilite_guides_image"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="12dp"
		    android:src="@drawable/navigation_accept" />

	</LinearLayout>

</LinearLayout>